kubernetes/frontend/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: sparrow-vps
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
